--- a/index.html
+++ b/index.html
@@ -5,22 +5,79 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div class="header">
-		<div class="logo"></div>
-		<div class="headerlist">
+	<div class="body">
+		<div class="header">
+			<div class="logo"></div>
+			<div class="headerlistbox">
+				<ul class="headerlist">
+					<li>About</li>
+					<li>Education</li>
+					<li>Work</li>
+					<li>Recreational</li>
+					<li>Future</li>
+					<li>Contact</li>
+				</ul>
+			</div>
+		</div>
+		<div class="main">
+			<div class="about inlineblock">
+				<div class="abouttext">
+					<h2>Who am I?</h2>
+					<p>My name is George Norfolk, I am a recent graduate reading Astrophysics at Queen Mary University of London. 
+					I have since become a trainee at Sparta Global where we write code like this.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+				<div class="aboutpic">
+					<img class="aboutpicimg" src="images/profilepic.png" alt="Profile picture">
+				</div>
+			</div>
+			<div class="education inlineblock">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			<div class="work inlineblock">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			<div class="recreational inlineblock">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			<div class="future inlineblock">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+		</div>
+		<div class="footer">
 			<ul>
-				<li>About</li>
-				<li>Education</li>
-				<li>Work</li>
-				<li>Future</li>
-				<li>Contact</li>
+				<li>Email</li>
+				<li>Phone</li>
+				<li>LinkedIn</li>
+				<li>Twitter</li>
+				<li>Other</li>
 			</ul>
 		</div>
-	</div>
-	<div class="footer">
-		<ul>
-			<li></li>
-		</ul>
 	</div>
 </body>
 </html>
