--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 <body>
 	<div class="body">
 		<div class="header">
-			<div class="logo"></div>
+			<div class="logo">
+				<h1>George Norfolk</h1>
+			</div>
 			<div class="headerlistbox">
-				<ul class="headerlist">
+				<ul class="headerlist inlineblock whitetext minwidth550">
 					<li>About</li>
 					<li>Education</li>
 					<li>Work</li>
@@ -23,7 +25,7 @@
 			<div class="about inlineblock">
 				<div class="abouttext">
 					<h2>Who am I?</h2>
-					<p>My name is George Norfolk, I am a recent graduate reading Astrophysics at Queen Mary University of London. 
+					<p class="font18 paddinglr10">My name is George Norfolk, I am a recent graduate reading Astrophysics at Queen Mary University of London. 
 					I have since become a trainee at Sparta Global where we write code like this.
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -37,15 +39,20 @@
 				</div>
 			</div>
 			<div class="education inlineblock">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<div class="educationtext">
+					<p class="font18 padding10">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+				<div class="educationimg">
+					<!-- <img src=""> -->
+				</div>
 			</div>
 			<div class="work inlineblock">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				<p class="font18 padding10">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -53,7 +60,7 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
 			<div class="recreational inlineblock">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				<p class="font18 padding10">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -61,7 +68,7 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
 			<div class="future inlineblock">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				<p class="font18 padding10">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -70,7 +77,7 @@
 			</div>
 		</div>
 		<div class="footer">
-			<ul>
+			<ul class="whitetext inlineblock minwidth400">
 				<li>Email</li>
 				<li>Phone</li>
 				<li>LinkedIn</li>
