End of day commit

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 					<img class="aboutpicimg" src="images/profilepic.png" alt="Profile picture">
 				</div>
 			</div>
+			<div class="banner">
+				<img class="bannerimg" src="images/banner.jpg">
+			</div>
 			<div class="education inlineblock">
 				<div class="educationtext">
 					<p class="font18 padding10">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
