checking connection with github works

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>George Norfolk</title>
+	<title>George R Norfolk</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
